Add home notice, contact page and remove Equestria.dev links

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div id="navbar-category-base-1" class="navbar-category-base">
                             <div class="navbar-category-section">
                                 <div class="navbar-category-section-header">Services and Inclusiveness</div>
-                                <a href="/fluff" class="navbar-category-section-item">
+                                <!--<a href="/fluff" class="navbar-category-section-item">
                                     <div class="navbar-category-section-item-icon-container">
                                         <svg class="navbar-category-section-item-icon-img" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="4" r="2"/><circle cx="18" cy="8" r="2"/><circle cx="20" cy="16" r="2"/><path d="M9 10a5 5 0 0 1 5 5v3.5a3.5 3.5 0 0 1-6.84 1.045Q6.52 17.48 4.46 16.84A3.5 3.5 0 0 1 5.5 10Z"/></svg>
                                     </div>
@@ -70,8 +70,8 @@
                                         <div class="navbar-category-section-item-text-title">Furries and Ponies</div>
                                         <div class="navbar-category-section-item-text-description">Statistics and actions</div>
                                     </div>
-                                </a>
-                                <a href="https://account.equestria.dev" target="_blank" class="navbar-category-section-item">
+                                </a>-->
+                                <a href="https://id.floo.fi" target="_blank" class="navbar-category-section-item">
                                     <div class="navbar-category-section-item-icon-container">
                                         <svg class="navbar-category-section-item-icon-img" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"/><circle cx="7.5" cy="7.5" r=".5" fill="currentColor"/></svg>
                                     </div>
@@ -80,7 +80,7 @@
                                         <div class="navbar-category-section-item-text-description">Central online account</div>
                                     </div>
                                 </a>
-                                <a href="https://status.equestria.dev" target="_blank" class="navbar-category-section-item">
+                                <a href="https://status.floo.fi" target="_blank" class="navbar-category-section-item">
                                     <div class="navbar-category-section-item-icon-container">
                                         <svg class="navbar-category-section-item-icon-img" height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" clip-rule="evenodd" d="M5.51324 3.62367L3.76375 8.34731C3.61845 8.7396 3.24433 8.99999 2.826 8.99999H0.75H0V7.49999H0.75H2.47799L4.56666 1.86057C4.88684 0.996097 6.10683 0.988493 6.43776 1.84891L10.5137 12.4463L12.2408 8.1286C12.3926 7.74894 12.7604 7.49999 13.1693 7.49999H15.25H16V8.99999H15.25H13.5078L11.433 14.1868C11.0954 15.031 9.8976 15.023 9.57122 14.1744L5.51324 3.62367Z" fill="currentColor"></path></svg>
                                     </div>
@@ -117,7 +117,7 @@
                                         <div class="navbar-category-section-item-text-description">Legal notices and licenses</div>
                                     </div>
                                 </a>
-                                <a href="/legal/branding" class="navbar-category-section-item">
+                                <!--<a href="/legal/branding" class="navbar-category-section-item">
                                     <div class="navbar-category-section-item-icon-container">
                                         <svg class="navbar-category-section-item-icon-img" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.67 19a2 2 0 0 0 1.416-.588l6.154-6.172a6 6 0 0 0-8.49-8.49L5.586 9.914A2 2 0 0 0 5 11.328V18a1 1 0 0 0 1 1z"/><path d="M16 8 2 22"/><path d="M17.5 15H9"/></svg>
                                     </div>
@@ -125,7 +125,7 @@
                                         <div class="navbar-category-section-item-text-title">Branding</div>
                                         <div class="navbar-category-section-item-text-description">Brand and logo guidelines</div>
                                     </div>
-                                </a>
+                                </a>-->
                             </div>
                         </div>
                     </div>
@@ -201,14 +201,14 @@
                     <span id="footer-inner-general-copyright">© <span id="footer-inner-general-copyright-year"></span></span>
                     <span id="footer-inner-general-version">-</span>
                 </a>
-                <a href="https://status.equestria.dev/" target="_blank" class="btn btn-secondary" id="footer-inner-general-status-container">
+                <a href="https://status.floo.fi/" target="_blank" class="btn btn-secondary" id="footer-inner-general-status-container">
                     <span id="footer-inner-general-status-indicator"></span>
                     <span id="footer-inner-general-status-text">Loading...</span>
                 </a>
                 <div id="footer-inner-general-socials">
                     <ul id="footer-inner-general-socials-inner">
                         <li>
-                            <a class="social" href="https://github.com/equestria-dev">
+                            <a class="social" href="https://github.com/floofi-org">
                                 <svg height="16" stroke-linejoin="round" style="color: currentcolor;" viewBox="0 0 16 16" width="16"><g clip-path="url(#clip0_872_3147)">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M8 0C3.58 0 0 3.57879 0 7.99729C0 11.5361 2.29 14.5251 5.47 15.5847C5.87 15.6547 6.02 15.4148 6.02 15.2049C6.02 15.0149 6.01 14.3851 6.01 13.7154C4 14.0852 3.48 13.2255 3.32 12.7757C3.23 12.5458 2.84 11.836 2.5 11.6461C2.22 11.4961 1.82 11.1262 2.49 11.1162C3.12 11.1062 3.57 11.696 3.72 11.936C4.44 13.1455 5.59 12.8057 6.05 12.5957C6.12 12.0759 6.33 11.726 6.56 11.5261C4.78 11.3262 2.92 10.6364 2.92 7.57743C2.92 6.70773 3.23 5.98797 3.74 5.42816C3.66 5.22823 3.38 4.40851 3.82 3.30888C3.82 3.30888 4.49 3.09895 6.02 4.1286C6.66 3.94866 7.34 3.85869 8.02 3.85869C8.7 3.85869 9.38 3.94866 10.02 4.1286C11.55 3.08895 12.22 3.30888 12.22 3.30888C12.66 4.40851 12.38 5.22823 12.3 5.42816C12.81 5.98797 13.12 6.69773 13.12 7.57743C13.12 10.6464 11.25 11.3262 9.47 11.5261C9.76 11.776 10.01 12.2558 10.01 13.0056C10.01 14.0752 10 14.9349 10 15.2049C10 15.4148 10.15 15.6647 10.55 15.5847C12.1381 15.0488 13.5182 14.0284 14.4958 12.6673C15.4735 11.3062 15.9996 9.67293 16 7.99729C16 3.57879 12.42 0 8 0Z" fill="currentColor"></path>
                                 </g>
