--- a/pages/home.html
+++ b/pages/home.html
@@ -3,6 +3,12 @@
 </script>
 
 <section id="home">
+    <div id="home-notice">
+        Codename "Oliver" is currently experimental. Please report any issues to the developers.
+        <a href="/contact" class="btn btn-secondary btn-cta-small" id="home-notice-btn">
+            <span class="btn-cta-text">See Source Code</span>
+        </a>
+    </div>
     <div id="home-hero">
         <div id="home-hero-inner">
             <div id="home-hero-text">
