Complete contact page

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
             <div id="navbar-inner-right">
                 <a href="/contact" class="btn btn-secondary">Contact</a>
-                <a href="/join" class="btn btn-primary">Join Floofi</a>
+                <!--<a href="/join" class="btn btn-primary">Join Floofi</a>-->
             </div>
         </nav>
     </header>
