--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
 <section id="home">
     <div id="home-notice">
         Codename "Oliver" is currently experimental. Please report any issues to the developers.
-        <a href="/contact" class="btn btn-secondary btn-cta-small" id="home-notice-btn">
+        <a href="https://github.com/equestria-dev/oliver" class="btn btn-secondary btn-cta-small" id="home-notice-btn">
             <span class="btn-cta-text">See Source Code</span>
         </a>
     </div>
