Replace the blog page with a link

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <a href="/archives" class="navbar-navigation-item-link">Archives</a>
                     </li>
                     <li class="navbar-navigation-item">
-                        <a href="/blog" class="navbar-navigation-item-link">Blog</a>
+                        <a href="https://blog.floo.fi" class="navbar-navigation-item-link">Blog</a>
                     </li>
                     <li class="navbar-navigation-item">
                         <a href="/starscouts" class="navbar-navigation-item-link">Starscouts</a>
