--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         </svg>
                     </li>
                     <li class="navbar-navigation-item">
-                        <a href="/archives" class="navbar-navigation-item-link">Archives</a>
+                        <a href="https://archives.floo.fi" class="navbar-navigation-item-link">Archives</a>
                     </li>
                     <li class="navbar-navigation-item">
                         <a href="https://blog.floo.fi" class="navbar-navigation-item-link">Blog</a>
