Bug fixes and disclaimers page

--- a/pages/credits.html
+++ b/pages/credits.html
@@ -40,8 +40,8 @@
 
     <div id="credits-footer">
         <p>Codename "Oliver" · <span id="credits-version">-</span><br>
-            © 2024 Floofi Systems Incorporated, All rights reserved.</p>
-        <p>Floofi, <span id="credits-projects"></span> and their logos are trademarks of Floofi Systems Incorporated
+            © 2024 Floofi Systems, All rights reserved.</p>
+        <p>Floofi, <span id="credits-projects"></span> and their logos are trademarks of Floofi Systems
             and/or are protected by applicable copyright laws in France and other countries.
         </p>
         <p>JetBrains, IntelliJ IDEA, PhpStorm, PyCharm, RustRover, WebStorm, JetBrains Toolbox, JetBrains Mono and their
