--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <a href="https://blog.floo.fi" class="navbar-navigation-item-link">Blog</a>
                     </li>
                     <li class="navbar-navigation-item">
-                        <a href="/starscouts" class="navbar-navigation-item-link">Starscouts</a>
+                        <a href="https://me.floo.fi" class="navbar-navigation-item-link">Starscouts</a>
                     </li>
                 </ul>
             </div>
