Final homepage images

--- a/pages/credits.html
+++ b/pages/credits.html
@@ -25,7 +25,7 @@
         <div>Vercel<br>Belleve Invis</div>
 
         <div class="credits-grid-title">Homepage Artwork</div>
-        <div>PitouRikou<br>[insert fursuiter here]</div>
+        <div>My Little Pony/Hasbro<br>Galacon<br>PitouRikou</div>
 
         <div class="credits-grid-title">Debugging Tools</div>
         <div>Faisal Salman</div>
