--- a/pages/credits.html
+++ b/pages/credits.html
@@ -15,7 +15,7 @@
         <div class="credits-grid-title">Design Consulting</div>
         <div>ryze312<br>Hailstorm<br>OliCantDecide<br>Zenko</div>
 
-        <div class="credits-grid-title">Codename<br>Mascot</div>
+        <div class="credits-grid-title">Codename</div>
         <div>OliCantDecide</div>
 
         <div class="credits-grid-title">Icons</div>
@@ -26,6 +26,15 @@
 
         <div class="credits-grid-title">Homepage Artwork</div>
         <div>My Little Pony/Hasbro<br>Galacon<br>PitouRikou</div>
+
+        <div class="credits-grid-title">Faunerie Artwork</div>
+        <div>marminatoror, 千雲九枭, mrscroup, liaaquilaauroracursed, suplolnope, lightly-san, oofycolorful, rainbow, maren, yakovlev-vad, assturtle, hauntedtuba, hakkerman, captainpudgemuffin, danipenki, t72b, luminousdazzle, petaltwinkle, mirtash, shinodage, draw3, nookprint</div>
+
+        <div class="credits-grid-title">Maretime Sans Background</div>
+        <div>My Little Pony/Hasbro</div>
+
+        <div class="credits-grid-title">Wishing Star Product Images</div>
+        <div>Amazon</div>
 
         <div class="credits-grid-title">Debugging Tools</div>
         <div>Faisal Salman</div>
