Preliminary "send a request" page and bug fixes

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
             <div class="contact-grid-item-title">Technical support.</div>
             <div class="contact-grid-item-text">Get help directly from the people who created your software, or from our community.</div>
             <div class="contact-grid-item-buttons">
-                <a href="mailto:support@floo.fi" class="contact-grid-item-button btn btn-primary btn-cta">Get Support</a>
+                <a href="/contact/start?i=4" class="contact-grid-item-button btn btn-primary btn-cta">Get Support</a>
                 <a href="https://status.floo.fi" class="contact-grid-item-button btn btn-secondary btn-cta" id="contact-status">
                     <span id="contact-status-indicator"></span>
                     <span id="contact-status-text">Loading...</span>
@@ -22,7 +22,7 @@
             <div class="contact-grid-item-title">Talk to our team.</div>
             <div class="contact-grid-item-text">Discuss your requirements and request specially-crafted software or enterprise support.</div>
             <div class="contact-grid-item-buttons">
-                <a href="mailto:contact@floo.fi" class="contact-grid-item-button btn btn-primary btn-cta">Contact our Team</a>
+                <a href="/contact/start" class="contact-grid-item-button btn btn-primary btn-cta">Contact our Team</a>
             </div>
         </div>
     </div>
@@ -33,7 +33,7 @@
                 <b>Floofi for Nonprofits is free</b> and is the first nonprofit-to-nonprofit platform, with all the power of Floofi software.
             </div>
             <div class="contact-grid-item-buttons">
-                <a href="mailto:nonprofit@floo.fi" class="contact-grid-secondary-button btn btn-secondary btn-cta-small">
+                <a href="/contact/start?i=9" class="contact-grid-secondary-button btn btn-secondary btn-cta-small">
                     <span class="btn-cta-text">Contact Nonprofit Support</span>
                 </a>
             </div>
