--- a/index.html
+++ b/index.html
@@ -61,16 +61,7 @@
                         <div id="navbar-category-base-0" class="navbar-category-base"></div>
                         <div id="navbar-category-base-1" class="navbar-category-base">
                             <div class="navbar-category-section">
-                                <div class="navbar-category-section-header">Services and Inclusiveness</div>
-                                <!--<a href="/fluff" class="navbar-category-section-item">
-                                    <div class="navbar-category-section-item-icon-container">
-                                        <svg class="navbar-category-section-item-icon-img" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="4" r="2"/><circle cx="18" cy="8" r="2"/><circle cx="20" cy="16" r="2"/><path d="M9 10a5 5 0 0 1 5 5v3.5a3.5 3.5 0 0 1-6.84 1.045Q6.52 17.48 4.46 16.84A3.5 3.5 0 0 1 5.5 10Z"/></svg>
-                                    </div>
-                                    <div class="navbar-category-section-item-text-container">
-                                        <div class="navbar-category-section-item-text-title">Furries and Ponies</div>
-                                        <div class="navbar-category-section-item-text-description">Statistics and actions</div>
-                                    </div>
-                                </a>-->
+                                <div class="navbar-category-section-header">Services</div>
                                 <a href="https://id.floo.fi" target="_blank" class="navbar-category-section-item">
                                     <div class="navbar-category-section-item-icon-container">
                                         <svg class="navbar-category-section-item-icon-img" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"/><circle cx="7.5" cy="7.5" r=".5" fill="currentColor"/></svg>
@@ -87,6 +78,15 @@
                                     <div class="navbar-category-section-item-text-container">
                                         <div class="navbar-category-section-item-text-title">Status Page</div>
                                         <div class="navbar-category-section-item-text-description">Infrastructure updates</div>
+                                    </div>
+                                </a>
+                                <a href="/contact/start" target="_blank" class="navbar-category-section-item">
+                                    <div class="navbar-category-section-item-icon-container">
+                                        <svg class="navbar-category-section-item-icon-img" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"/><path d="M12 8v4"/><path d="M12 16h.01"/></svg>
+                                    </div>
+                                    <div class="navbar-category-section-item-text-container">
+                                        <div class="navbar-category-section-item-text-title">Send a Request</div>
+                                        <div class="navbar-category-section-item-text-description">Report an issue</div>
                                     </div>
                                 </a>
                             </div>
@@ -251,11 +251,14 @@
         </div>
     </footer>
 
+    <script src="/assets/src/archives.js"></script>
     <script src="/assets/src/projects.js"></script>
     <script src="/assets/src/navigation.js"></script>
     <script src="/assets/src/loader.js"></script>
     <script src="/assets/src/scroll.js"></script>
     <script src="/assets/src/footer.js"></script>
     <script src="/assets/src/debug.js"></script>
+    <script src="https://status.floo.fi/src/decoder.js"></script>
+    <script src="https://status.floo.fi/src/config.js"></script>
 </body>
 </html>
